5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4077/executions/1668_1396.log
== TEST (2019-04-15 18:29:45) 
-- CODE:
valor consumido = float(input("valor: "))
gorjeta1 = valor + 0,10

-- ERROR:
File "XXXX", line 1
    valor consumido = float(input())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:30:09) 
-- CODE:
valor consumido = float(input("valor consumido: "))
gorjeta1 = valor + 0,10

-- ERROR:
File "XXXX", line 1
    valor consumido = float(input())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:30:33) 
-- CODE:
valor= float(input("valor: "))
gorjeta1 = valor + 0,10

-- ERROR:
File "XXXX", line 1
    valor consumido = float(input())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:32:43) 
-- CODE:
valor= float(input("valor: "))
gorjeta1 = valor * 1,1
gorjeta2 = 

-- ERROR:
File "XXXX", line 3
    gorjeta2 = 
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:33:22) 
-- CODE:
valor= float(input("valor: "))
gorjeta1 = valor * 1,1
gorjeta2 = valor * 0,6

-- ERROR:
File "XXXX", line 3
    gorjeta2 = 
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:33:40) 
-- CODE:
valor= float(input("valor: "))
gorjeta1 = valor * 1,1
gorjeta2 = valor * 0,6

if valor <= 300

-- ERROR:
File "XXXX", line 5
    if valor <= 300
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:34:41) 
-- CODE:
valor= float(input("valor: "))
gorjeta1 = valor * 1,1
gorjeta2 = valor * 0,6

if valor<=300

-- ERROR:
File "XXXX", line 5
    if valor<=300
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:35:32) 
-- CODE:
valor= float(input("valor: "))
gorjeta1 = valor * 1,1
gorjeta2 = valor * 0,6

if valor<=300
	print("gorjeta1")
	

-- ERROR:
File "XXXX", line 5
    if valor<=300
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:36:01) 
-- CODE:
valor= float(input("valor: "))
gorjeta1 = valor * 1,1
gorjeta2 = valor * 0,6

if valor  <= 300
	print("gorjeta1")
	

-- ERROR:
File "XXXX", line 5
    if valor  <= 300
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:36:25) 
-- CODE:
valor= float(input("valor: "))
gorjeta1 = valor * 1,1
gorjeta2 = valor * 0,6

if valor < 300
	print("gorjeta1")
	

-- ERROR:
File "XXXX", line 5
    if valor < 300
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:36:55) 
-- CODE:
valor= float(input("valor: "))
gorjeta1 = valor * 1,1
gorjeta2 = valor * 0,6

if valor <= 300
	print("gorjeta1")
	

-- ERROR:
File "XXXX", line 5
    if valor <= 300
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:38:05) 
-- CODE:
valor= float(input("valor: "))
gorjeta1 = valor * 1,1
gorjeta2 = valor * 0,6

if (valor <= 300)
	print("gorjeta1")
	

-- ERROR:
File "XXXX", line 5
    if (valor <= 300)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:39:35) 
-- CODE:
valor= float(input("valor: "))
gorjeta1 = valor * 1,1
gorjeta2 = valor * 0,6

if (condicao <= 300)
	print("gorjeta1")
	

-- ERROR:
File "XXXX", line 5
    if (condicao <= 300)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:39:44) 
-- CODE:
valor= float(input("valor: "))
gorjeta1 = valor * 1,1
gorjeta2 = valor * 0,6

if condicao <= 300
	print("gorjeta1")
	

-- ERROR:
File "XXXX", line 5
    if condicao <= 300
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:40:03) 
-- CODE:
valor= float(input("valor: "))
gorjeta1 = valor * 1,1
gorjeta2 = valor * 0,6

if valor <= 300
	print("gorjeta1")
	

-- ERROR:
File "XXXX", line 5
    if valor <= 300
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:40:17) 
-- CODE:
valor= float(input("valor: "))
gorjeta1 = valor * 1,1
gorjeta2 = valor * 0,6

if (valor <= 300):
	print("gorjeta1")
	

-- OUTPUT:
gorjeta1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:40:34) 
-- CODE:
valor= float(input("valor: "))
gorjeta1 = valor * 1,1
gorjeta2 = valor * 0,6

if (valor <= 300):
	print("gorjeta1")
else: 
	print("gorjeta2")
	

-- OUTPUT:
gorjeta1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:40:42) 
-- CODE:
valor= float(input("valor: "))
gorjeta1 = valor * 1,1
gorjeta2 = valor * 0,6

if (valor <= 300):
	print("gorjeta1")
else: 
	print("gorjeta2")
	

-- OUTPUT:
gorjeta1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:40:54) 
-- CODE:
valor= float(input("valor: "))
gorjeta1 = valor * 1,1
gorjeta2 = valor * 0,6

if (valor <= 300):
	print("gorjeta1")
else: 
	print("gorjeta2")
	

-- EXECUTION TIME:
0.14846
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
gorjeta1
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
gorjeta2
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
gorjeta2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:41:02) 
-- CODE:
valor= float(input("valor: "))
gorjeta1 = valor * 1,1
gorjeta2 = valor * 0,06

if (valor <= 300):
	print("gorjeta1")
else: 
	print("gorjeta2")
	

-- ERROR:
File "XXXX", line 3
    gorjeta2 = valor * 0,06
                          ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:41:15) 
-- CODE:
valor= float(input("valor: "))
gorjeta1 = valor * 1,1
gorjeta2 = valor * 0.06

if (valor <= 300):
	print("gorjeta1")
else: 
	print("gorjeta2")
	

-- OUTPUT:
gorjeta1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:41:22) 
-- CODE:
valor= float(input("valor: "))
gorjeta1 = valor * 1,1
gorjeta2 = valor * 0.06

if (valor <= 300):
	print("gorjeta1")
else: 
	print("gorjeta2")
	

-- EXECUTION TIME:
0.157441
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
gorjeta1
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
gorjeta2
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
gorjeta2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:42:24) 
-- CODE:
valor= float(input("valor: "))
gorjeta1 = valor * 1,1
gorjeta2 = valor * 6*100 

if (valor <= 300):
	print("gorjeta1")
else: 
	print("gorjeta2")
	

-- OUTPUT:
gorjeta1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:42:44) 
-- CODE:
valor= float(input("valor: "))
gorjeta1 = valor * 1,1
gorjeta2 = valor * 6*100 

if (valor <= 300):
	print("gorjeta1")
else: 
	print("gorjeta2")
	

-- EXECUTION TIME:
0.118817
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
gorjeta1
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
gorjeta2
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
gorjeta2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:43:01) 
-- CODE:
valor= float(input("valor: "))
gorjeta1 = valor * 1,1
gorjeta2 = valor * 6/100 

if (valor <= 300):
	print("gorjeta1")
else: 
	print("gorjeta2")
	

-- OUTPUT:
gorjeta1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:43:17) 
-- CODE:
valor= float(input("valor: "))
gorjeta1 = valor * 1,1
gorjeta2 = valor * 6/100 

if (valor <= 300):
	print("gorjeta1")
else: 
	print("gorjeta2")
	

-- EXECUTION TIME:
0.19268
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
gorjeta1
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
gorjeta2
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
gorjeta2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:44:18) 
-- CODE:
valor= float(input("valor: "))
valortotal2 = valor * 1,1
valortotal1 = valor * 6

if (valor <= 300):
	print("gorjeta1")
else: 
	print("gorjeta2")
	

-- OUTPUT:
gorjeta1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:44:38) 
-- CODE:
valor= float(input("valor: "))
valortotal2 = valor * 1,1
valortotal1 = valor * 6

if (valor <= 300):
	print("valortotal1")
else: 
	print("valortotal2")
	

-- OUTPUT:
valortotal1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:45:45) 
-- CODE:
valor= float(input("valor: "))
valortotal2 = valor * 10/100
valortotal1 = valor * 6/100

if (valor <= 300):
	print("valortotal1")
else: 
	print("valortotal2")
	

-- OUTPUT:
valortotal1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:45:55) 
-- CODE:
valor= float(input("valor: "))
valortotal2 = valor * 10/100
valortotal1 = valor * 6/100

if (valor <= 300):
	print("valortotal1")
else: 
	print("valortotal2")
	

-- EXECUTION TIME:
0.153828
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
valortotal1
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
valortotal2
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
valortotal2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:46:47) 
-- CODE:
valor= float(input("valor: "))
valortotal2 = valor * 10/100
valortotal1 = valor * 6/100

if (valor <= 300):
	print("valortotal1")
else: 
	print("valortotal2")
	

-- EXECUTION TIME:
0.128146
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
valortotal1
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
valortotal2
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
valortotal2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:46:49) 
-- CODE:
valor= float(input("valor: "))
valortotal2 = valor * 10/100
valortotal1 = valor * 6/100

if (valor <= 300):
	print("valortotal1")
else: 
	print("valortotal2")
	

-- OUTPUT:
valortotal1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:48:06) 
-- CODE:
valor= float(input("valor: "))
valortotal2 = valor * 10/100
valortotal1 = valor * 6/100

if (valor <= 300):
	print("valortotal1")
else: 
	print("valortotal2")
	

-- EXECUTION TIME:
0.157273
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
valortotal1
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
valortotal2
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
valortotal2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:48:45) 
-- CODE:
valor= float(input("valor: "))
valortotal1 = valor * 10/100
valortotal2 = valor * 6/100

if (valor <= 300):
	print("valortotal1")
else: 
	print("valortotal2")
	

-- EXECUTION TIME:
0.160517
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
valortotal1
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
valortotal2
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
valortotal2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:50:38) 
-- CODE:
valor= float(input("valor: "))
valortotal1 = valor + 10/100
valortotal2 = valor + 6/100

if (valor <= 300):
	print(valortotal1)
else: 
	print(valortotal2)
	

-- OUTPUT:
224.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:50:46) 
-- CODE:
valor= float(input("valor: "))
valortotal1 = valor + 10/100
valortotal2 = valor + 6/100

if (valor <= 300):
	print(valortotal1)
else: 
	print(valortotal2)
	

-- EXECUTION TIME:
0.141961
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
224.6
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
365.21
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
500.06
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:50:55) 
-- CODE:
valor= float(input("valor: "))
valortotal1 = valor + 1,1
valortotal2 = valor + 6/100

if (valor <= 300):
	print(valortotal1)
else: 
	print(valortotal2)
	

-- OUTPUT:
(225.5, 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:52:08) 
-- CODE:
valor= float(input("valor: "))
valortotal1 = valor + 1,1
valortotal2 = valor + (6/100)

if (valor <= 300):
	print(valortotal1)
else: 
	print(valortotal2)
	

-- OUTPUT:
(225.5, 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:52:29) 
-- CODE:
valor= float(input("valor: "))
valortotal1 = valor + (10/100)
valortotal2 = valor + (6/100)

if (valor <= 300):
	print(valortotal1)
else: 
	print(valortotal2)
	

-- OUTPUT:
224.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:53:25) 
-- CODE:
valor= float(input("valor: "))
valortotal1 = valor * 10/100 
valortotal2 = valor * 6/100

if (valor <= 300):
	print(valortotal1)
else: 
	print(valortotal2)
	

-- OUTPUT:
22.45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:53:29) 
-- CODE:
valor= float(input("valor: "))
valortotal1 = valor * 10/100 
valortotal2 = valor * 6/100

if (valor <= 300):
	print(valortotal1)
else: 
	print(valortotal2)
	

-- EXECUTION TIME:
0.139408
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
22.45
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
21.908999999999995
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
30.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:53:31) 
-- CODE:
valor= float(input("valor: "))
valortotal1 = valor * 10/100 
valortotal2 = valor * 6/100

if (valor <= 300):
	print(valortotal1)
else: 
	print(valortotal2)
	

-- OUTPUT:
22.45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:54:13) 
-- CODE:
valor= float(input("valor: "))
valortotal1 = valor + (10/100)  
valortotal2 = valor * 6/100

if (valor <= 300):
	print(valortotal1)
else: 
	print(valortotal2)
	

-- OUTPUT:
224.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
